Fix hover on mobile

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -57,3 +57,9 @@
     height: auto;
   }
 }
+
+@media(hover: hover) {
+  .card:hover {
+    background-color: slategray;
+  }
+}
